
Thu Jul 27 15:22:17 EDT 1995	Paul Park	(pjpark@mit.edu)
	* rsa-md4.h - Don't include k5-config.h.  No longer present or needed.


Fri Jul 7 16:13:28 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add t_cksum under unix only.
	* configure.in - Define MD4_K5BETA_COMPAT to select compatability for
		md4crypto.c.
	* md4crypto.c - Correct implementation of RSA-MD4-DES checksums.  Add
		ability to understand previous implementation and ability to
		generate these checksums when forced to.
		- Also add verification procedure for these checksums.
	* md4glue.c - Add verifier procedure.
	* rsa-md4.h - Add RSA_MD4_DES_CONFOUND_LENGTH, the length of the
		RSA-MD4-DES confounder per RFC1510.


Tue Jun 27 15:53:02 EDT 1995	Paul Park	(pjpark@mit.edu)
	* md4.c(Transform) - Add 'register' to scratch variable names.  Helps
		out compiler so that DEC native compilers can now optimize
		this module within our lifetimes.

Thu Jun 22 16:13:29 1995  Tom Yu  (tlyu@dragons-lair)

	* md4.c: reverse sense of KRB5_PROVIDE_PROTOTYPES

Wed Jun 21 10:52:07 1995    <tytso@rsx-11.mit.edu>

	* md4crypto.c, md4glue.c: Change PROTOTYPE -> KRB5_PROTOTYPE

Fri Jun  9 19:18:17 1995    <tytso@rsx-11.mit.edu>

	* md4crypto.c: Fix -Wall nits

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu May 25 22:16:14 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for shared libraries.

Thu Apr 20 11:39:15 1995    <tytso@rsx-11.mit.edu>

	* rsa-md4.h: removed unneeded #include of wordsize.h

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.
        * *.h added FAR to pointers visible at to the world.
        * rsa-md4.h: __STDC__ condition also checks _WINDOWS

Thu Mar 16 21:19:55 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (CFLAGS):  Tweak for Unix->MPW converter.
	(LDFLAGS):  Remove, conflicts with pre.in.